# mini-rspack

./: .gitignore  404.html  Cargo.toml  README.md  README_zh.md  TODO.md  deploy-docs.sh  doc.md  hashmap.json  index.d.ts  index.html  index.js  mini-rspack.darwin-arm64.node  mini-rspack.darwin-x64.node  package.json  pnpm-lock.yaml  preview-docs.sh  webpack.config.js
.github/workflows/: deploy.yml
advanced/: index.html  performance.html  testing.html
api/: compilation.html  compiler.html  hooks.html  index.html  loader.html  module.html  plugin.html
assets/: advanced_index.md.L4JZOzof.js  advanced_index.md.L4JZOzof.lean.js  advanced_performance.md.D3tX91NZ.js  advanced_performance.md.D3tX91NZ.lean.js  advanced_testing.md.CFX7AGnP.js  advanced_testing.md.CFX7AGnP.lean.js  api_compilation.md.BeGJkwRN.js  api_compilation.md.BeGJkwRN.lean.js  api_compiler.md.BpBHMUYU.js  api_compiler.md.BpBHMUYU.lean.js  api_hooks.md.DIpxht8c.js  api_hooks.md.DIpxht8c.lean.js  api_index.md.DIDwofr5.js  api_index.md.DIDwofr5.lean.js  api_loader.md.Dwt9uQYJ.js  api_loader.md.Dwt9uQYJ.lean.js  api_module.md.BzybcnMJ.js  api_module.md.BzybcnMJ.lean.js  api_plugin.md.xE0Z30MQ.js  api_plugin.md.xE0Z30MQ.lean.js  app.aGfANz2A.js  guide_architecture.md.RVrx7wLF.js  guide_architecture.md.RVrx7wLF.lean.js  guide_configuration.md.CaifPFHy.js  guide_configuration.md.CaifPFHy.lean.js  guide_getting-started.md.DxxlAwLu.js  guide_getting-started.md.DxxlAwLu.lean.js  guide_index.md.DZzbFNX0.js  guide_index.md.DZzbFNX0.lean.js  guide_loaders.md.wA_csw4V.js  guide_loaders.md.wA_csw4V.lean.js  guide_plugins.md.XwUTfc2c.js  guide_plugins.md.XwUTfc2c.lean.js  index.md.2vg-XgBf.js  index.md.2vg-XgBf.lean.js  style.CbJSiafm.css  zh_api_index.md.DCcim96j.js  zh_api_index.md.DCcim96j.lean.js  zh_guide_architecture.md.BzuEGAlg.js  zh_guide_architecture.md.BzuEGAlg.lean.js  (+12 more)
assets/chunks/: framework.osJJb4L7.js  theme.CqEIxgNp.js
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/advanced/: index.md  performance.md  testing.md
docs/api/: compilation.md  compiler.md  hooks.md  index.md  loader.md  module.md  plugin.md
docs/guide/: architecture.md  configuration.md  index.md  (+3 more)
guide/: architecture.html  configuration.html  getting-started.html  index.html  loaders.html  plugins.html
loaders/: advanced-loader.js  babel-loader.js  css-loader.js  file-loader.js  html-loader.js  logger-loader.js
plugins/: advanced-plugin.js  banner-plugin.js  clean-webpack-plugin.js  emit-plugin.js  html-webpack-plugin.js  mini-css-extract-plugin.js
rs-webpack/: .gitignore  Cargo.toml  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
rs-webpack/bak/: async_hook.bail.rs  sync_hook_raw.rs
rs-webpack/crates/demo/: Cargo.toml
rs-webpack/crates/demo/src/: demo1.rs  main.rs
rs-webpack/crates/rswebpack_binding/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
rs-webpack/crates/rswebpack_binding/src/: lib.rs  raw_config.rs
rs-webpack/crates/rswebpack_binding/src/plugins/: interceptor.rs  mod.rs
rs-webpack/crates/rswebpack_core/: Cargo.toml
rs-webpack/crates/rswebpack_core/src/: compiler.rs  config.rs  demo.rs  lib.rs  template.rs  transform.rs
rs-webpack/crates/rswebpack_core/src/hooks/: mod.rs
rs-webpack/crates/rswebpack_core/src/plugin/: driver.rs  mod.rs
rs-webpack/crates/rswebpack_core/templates/: output.stpl
rs-webpack/crates/rswebpack_error/: Cargo.toml
rs-webpack/crates/rswebpack_error/src/: lib.rs
rs-webpack/crates/rswebpack_hook/: Cargo.toml
rs-webpack/crates/rswebpack_hook/src/: lib.rs
rs-webpack/crates/rswebpack_macros/: Cargo.toml
rs-webpack/crates/rswebpack_macros/src/: hook.rs  lib.rs  plugin.rs  runtime_module.rs
rs-webpack/crates/rswebpack_napi/: Cargo.toml
rs-webpack/crates/rswebpack_napi/src/: callback.rs  errors.rs  lib.rs  threadsafe_function.rs  threadsafe_js_value_ref.rs  utils.rs
rs-webpack/crates/rswebpack_napi/src/ext/: mod.rs
rs-webpack/crates/rswebpack_napi/src/js_values/: js_reg_exp.rs  js_value_ref.rs  value_ref.rs
src/: b.js  code-splitting.js  compilation.rs  compiler.rs  dynamic-module.js  entry-complex.js  entry1.js  lib.rs  loader.rs  loader_runner.rs  module.rs  plugin.rs  plugin_system.rs  style.css  template.html  utils.rs
test/: test.js
zh/: index.html
(+23 files in other folders)
