[package]
name = "mini-rspack"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of mini-webpack"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.0", default-features = false, features = ["napi8"] }
napi-derive = "2.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"
pathdiff = "0.2"
regex = "1.10.2"

[build-dependencies]
napi-build = "2.0.1"
