[workspace]
members  = ["crates/*"]
resolver = "2" 

[workspace.dependencies]
async-trait = "0.1.83"
tokio = { version = "1.41.0", features = ["full"] }
anyhow = { version = "1.0.92" }
rustc-hash         = { version = "1.1.0" }
tracing            = { version = "0.1.40" }
once_cell          = { version = "1.19.0" }
napi        = { package = "napi-h", version = "=2.16.1" }
napi-build  = { version = "2" }