[package]
edition = "2021"
name = "rswebpack_binding"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi-derive = "2.12.2"
rswebpack_core = { version = "0.1.0", path = "../rswebpack_core" }
rswebpack_hook = { version = "0.1.0", path = "../rswebpack_hook" }
rswebpack_error        = { version = "0.1.0", path = "../rswebpack_error" }
rswebpack_napi       = { version = "0.1.0", path = "../rswebpack_napi" }
tokio = {workspace = true}
once_cell = {workspace = true}
napi = {workspace = true}
tracing            = { workspace = true}

[build-dependencies]
napi-build = { workspace = true }

[profile.release]
lto = true
strip = "symbols"
