[package]
name = "rswebpack_hook"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait         = { workspace = true }
futures-concurrency = "7.5.0"
rswebpack_error        = { version = "0.1.0", path = "../rswebpack_error" }
rswebpack_macros       = { version = "0.1.0", path = "../rswebpack_macros" }
rustc-hash          = { workspace = true }
