[package]
description = "rspack napi"
license     = "MIT"
name        = "rswebpack_napi"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi         = { workspace = true, features = ["async", "tokio_rt", "serde-json", "napi4", "anyhow"] }
oneshot      = "0.1.6"
rswebpack_error = { version = "0.1.0", path = "../rswebpack_error" }
tokio        = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }
